# AI_InterviewerAgent

./: .env.example  .gitignore  README.md  alembic.ini  command.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: __init__.py  base_agent.py  chat_agent.py  evaluator.py  intent_router.py  interviewer.py  jd_analyzer.py  question_planner.py  resume_analyzer.py  study_planner.py
api/: __init__.py  main.py  middleware.py  schemas.py
api/routers/: __init__.py  health.py  interview.py  upload.py  websocket.py
audio/: __init__.py  audio_manager.py  stt.py  tts.py
cli/: __init__.py  main.py
config/: __init__.py  logging.py  settings.py
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: main.js
mcp/: __init__.py  mcp_client.py
mcp/tools/: __init__.py  github_tool.py  web_scraper.py
memory/: __init__.py  long_term.py  memory_manager.py  models.py  short_term.py
orchestration/: __init__.py  difficulty_fsm.py  edges.py  graph.py  nodes.py  state.py
rag/: __init__.py  indexer.py  query_engine.py  reranker.py
rag/evaluator/: __init__.py  metrics.py  rag_evaluator.py  topk_experiment.py
rag/retrievers/: __init__.py  bm25_retriever.py  hybrid_retriever.py  vector_retriever.py
scripts/: build_index.py  check_env.py  init_db.py  start_services.sh  start_services_on3090.sh
skills/: __init__.py  base_skill.py  compare_skill.py  project_skill.py  quiz_skill.py  skill_registry.py  teach_skill.py
tests/: show_weaviate.py  test_agents.py  test_api.py  test_memory.py  test_rag.py
(+2 files in other folders)
